--- a/task1a/solution.ipynb
+++ b/task1a/solution.ipynb
@@ -30,8 +30,7 @@
    "outputs": [],
    "source": [
     "def ridge(lambd: float, X_train: np.ndarray, y_train: np.ndarray) -> np.ndarray:\n",
-    "  X_trans = X_train.transpose()\n",
-    "  w = np.matmul(np.matmul(np.linalg.inv(np.matmul(X_trans, X_train) + lambd), X_trans), y_train)\n",
+    "  w = np.dot(np.dot(np.linalg.inv(np.dot(X_train.T, X_train) + lambd), X_train.T), y_train)\n",
     "  return w"
    ]
   },
