--- a/task2/solution.ipynb
+++ b/task2/solution.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC, SVR\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from joblib import dump, load\n",
     "import os\n",
-    "from typing import Tuple"
+    "from typing import Tuple\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -52,9 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_features = pd.read_csv('train_features.csv')\n",
-    "train_labels = pd.read_csv('train_labels.csv')\n",
-    "test_features = pd.read_csv('test_features.csv')"
+    "features = pd.read_csv('train_features.csv')\n",
+    "labels = pd.read_csv('train_labels.csv')\n",
+    "sub_features = pd.read_csv('test_features.csv')"
    ]
   },
   {
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +87,9 @@
     "\n",
     "  features_mean = features.groupby(PID).mean().add_suffix('_mean')\n",
     "  features_std = features.groupby(PID).std().add_suffix('_std')\n",
-    "  # features_count = features.groupby(PID).count().add_suffix('_count')\n",
+    "  features_count = features.groupby(PID).count().add_suffix('_count')\n",
     "\n",
-    "  full_features = pd.concat([features_mean, features_std], axis='columns')\n",
+    "  full_features = pd.concat([features_mean, features_std, features_count], axis='columns')\n",
     "  full_features.fillna(full_features.mean(axis='rows'), inplace=True)\n",
     "\n",
     "  return StandardScaler().fit_transform(full_features), pids"
@@ -95,13 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, train_pids = preprocess_features(train_features)\n",
-    "y_train = preprocess_labels(train_labels)\n",
-    "X_test, test_pids = preprocess_features(test_features)"
+    "X, pids = preprocess_features(features)\n",
+    "Y = preprocess_labels(labels)\n",
+    "X_sub, sub_pids = preprocess_features(sub_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2)"
    ]
   },
   {
@@ -113,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_clf(entry: str, X_train: np.ndarray, train_labels: pd.DataFrame, force_new=False) -> SVC:\n",
+    "def train_clf(entry: str, X_train: np.ndarray, Y_train: pd.DataFrame, force_new=False) -> SVC:\n",
     "  file_name = f'{MODEL_PATH}/{entry}.joblib'\n",
     "\n",
     "  if not force_new and os.path.isfile(file_name):\n",
     "    return load(file_name)\n",
     "  else:\n",
-    "    y_train = train_labels[entry]\n",
+    "    y_train = Y_train[entry]\n",
     "\n",
     "    clf = SVC(probability=True, class_weight='balanced')\n",
     "    clf.fit(X_train, y_train)\n",
@@ -132,15 +143,15 @@
     "\n",
     "    return clf\n",
     "\n",
-    "def train_regr(entry: str, X_train: np.ndarray, train_labels: pd.DataFrame, force_new=False) -> SVR:\n",
-    "  file_name = f'{MODEL_PATH}/{entry}.joblib'\n",
+    "def train_regr(entry: str, X_train: np.ndarray, Y_train: pd.DataFrame, version='', force_new=False) -> SVR:\n",
+    "  file_name = f'{MODEL_PATH}/{entry}{version}.joblib'\n",
     "\n",
     "  if not force_new and os.path.isfile(file_name):\n",
     "    return load(file_name)\n",
     "  else:\n",
-    "    y_train = train_labels[entry]\n",
+    "    y_train = Y_train[entry]\n",
     "\n",
-    "    regr = SVR()\n",
+    "    regr = SVR(epsilon=0.5)\n",
     "    regr.fit(X_train, y_train)\n",
     "\n",
     "    dump(regr, file_name)\n",
@@ -150,20 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 155.84it/s]\n",
+      "100%|██████████| 4/4 [00:52<00:00, 13.22s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 1\n",
-    "for entry in TESTS:\n",
-    "  train_clf(entry, X_train, train_labels)\n",
+    "for entry in tqdm(TESTS):\n",
+    "  train_clf(entry, X_train, Y_train, '_train')\n",
     "\n",
     "# Task 2\n",
-    "train_clf(SEPSIS, X_train, train_labels)\n",
+    "train_clf(SEPSIS, X_train, Y_train, '_train')\n",
     "\n",
     "# Task 3\n",
-    "for entry in VITALS:\n",
-    "  train_regr(entry, X_train, train_labels)"
+    "for entry in tqdm(VITALS):\n",
+    "  train_regr(entry, X_train, Y_train, '_train')"
    ]
   },
   {
@@ -177,37 +197,63 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 1/10 [02:14<20:07, 134.16s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 1\n",
+    "for entry in tqdm(TESTS):\n",
+    "  train_clf(entry, X, Y)\n",
+    "\n",
+    "# Task 2\n",
+    "train_clf(SEPSIS, X, Y)\n",
+    "\n",
+    "# Task 3\n",
+    "for entry in tqdm(VITALS):\n",
+    "  train_regr(entry, X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_clf(entry: str, X_test: np.ndarray) -> pd.DataFrame:\n",
-    "  clf = load(f'{MODEL_PATH}/{entry}.joblib')\n",
+    "def prepare_clf(entry: str, X_test: np.ndarray, version='') -> pd.DataFrame:\n",
+    "  clf = load(f'{MODEL_PATH}/{entry}{version}.joblib')\n",
     "  y_pred = clf.predict_proba(X_test)[:,1]\n",
     "  return pd.DataFrame(y_pred, columns=[entry])\n",
     "\n",
-    "def prepare_regr(entry: str, X_test: np.ndarray) -> pd.DataFrame:\n",
-    "  regr = load(f'{MODEL_PATH}/{entry}.joblib')\n",
+    "def prepare_regr(entry: str, X_test: np.ndarray, version='') -> pd.DataFrame:\n",
+    "  regr = load(f'{MODEL_PATH}/{entry}{version}.joblib')\n",
     "  y_pred = regr.predict(X_test)\n",
     "  return pd.DataFrame(y_pred, columns=[entry])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = [pd.DataFrame(test_pids, columns=[PID])]\n",
+    "y_pred = [pd.DataFrame(sub_pids, columns=[PID])]\n",
     "\n",
     "# Task 1\n",
-    "for entry in TESTS:\n",
-    "  y_pred.append(prepare_clf(entry, X_test))\n",
+    "for entry in tqdm(TESTS):\n",
+    "  y_pred.append(prepare_clf(entry, X_sub))\n",
     "\n",
     "# Task 2\n",
-    "y_pred.append(prepare_clf(SEPSIS, X_test))\n",
+    "y_pred.append(prepare_clf(SEPSIS, X_sub))\n",
     "\n",
     "# Task 3\n",
-    "for entry in VITALS:\n",
-    "  y_pred.append(prepare_regr(entry, X_test))"
+    "for entry in tqdm(VITALS):\n",
+    "  y_pred.append(prepare_regr(entry, X_sub))"
    ]
   },
   {
@@ -229,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,41 +284,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_report(clf: SVC, X_test: np.ndarray, y_test: pd.DataFrame):\n",
-    "  y_pred = clf.predict(X_test)\n",
-    "  y_pred\n",
+    "def evaluate_clf(entry: str, Y_test: pd.DataFrame, y_pred: np.ndarray, verbose=False) -> float:\n",
+    "  roc_auc = metrics.roc_auc_score(Y_test[entry], y_pred)\n",
     "\n",
-    "  y_pred_proba = clf.predict_proba(X_test)[:,1]\n",
-    "  y_pred_proba\n",
+    "  if verbose:\n",
+    "    print(entry, '---')\n",
+    "    print('accuracy', metrics.accuracy_score(Y_test[entry], np.around(y_pred)))\n",
+    "    print('recall', metrics.recall_score(Y_test[entry], np.around(y_pred)))\n",
+    "    print('precision', metrics.precision_score(Y_test[entry], np.around(y_pred)))\n",
+    "    print('ROC AUC', roc_auc)\n",
     "\n",
-    "  print('accuracy', metrics.accuracy_score(y_test, y_pred))\n",
-    "  print('recall', metrics.recall_score(y_test, y_pred))\n",
-    "  print('precision', metrics.precision_score(y_test, y_pred))\n",
-    "  print('ROC AUC', metrics.roc_auc_score(y_test, y_pred_proba))"
+    "  return roc_auc\n",
+    "\n",
+    "def evaluate_regr(entry: str, Y_test: pd.DataFrame, y_pred: np.ndarray, verbose=False) -> float:\n",
+    "  r2 = 0.5 + 0.5 * np.maximum(0, metrics.r2_score(Y_test[entry], y_pred))\n",
+    "  \n",
+    "  if verbose:\n",
+    "    print(entry, '---')\n",
+    "    print('R2', r2)\n",
+    "\n",
+    "  return r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:21<00:00,  5.47s/it]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy 0.9147143985259278\n",
-      "recall 0.8520220588235294\n",
-      "precision 0.38851634534786256\n",
-      "ROC AUC 0.9475991560973527\n"
+      "TASK 3: 0.7194469400531611\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "print_report(clf, X_train, train_labels['LABEL_Sepsis'])"
+    "# Task 1\n",
+    "task1 = []\n",
+    "for entry in tqdm(TESTS):\n",
+    "  task1.append(evaluate_clf(entry, Y_test, prepare_clf(entry, X_test, '_train')))\n",
+    "print('TASK 1:', np.mean(task1))\n",
+    "\n",
+    "# Task 2\n",
+    "task2 = evaluate_clf(entry, Y_test, prepare_clf(entry, X_test, '_train'))\n",
+    "print('TASK 2:', task2)\n",
+    "\n",
+    "# Task 3\n",
+    "task3 = []\n",
+    "for entry in tqdm(VITALS):\n",
+    "  task3.append(evaluate_regr(entry, Y_test, prepare_regr(entry, X_test, '_train')))\n",
+    "print('TASK 3:', np.mean(task3))"
    ]
   }
  ],
