--- a/task2/solution.ipynb
+++ b/task2/solution.ipynb
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_clf(entry: str, X_train: np.ndarray, Y_train: pd.DataFrame, force_new=False) -> SVC:\n",
-    "  file_name = f'{MODEL_PATH}/{entry}.joblib'\n",
+    "def train_clf(entry: str, X_train: np.ndarray, Y_train: pd.DataFrame, version='', force_new=False) -> SVC:\n",
+    "  file_name = f'{MODEL_PATH}/{entry}{version}.joblib'\n",
     "\n",
     "  if not force_new and os.path.isfile(file_name):\n",
     "    return load(file_name)\n",
@@ -161,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 155.84it/s]\n",
-      "100%|██████████| 4/4 [00:52<00:00, 13.22s/it]\n"
+      "100%|██████████| 10/10 [16:34<00:00, 99.44s/it]\n",
+      "100%|██████████| 4/4 [01:03<00:00, 15.85s/it]\n"
      ]
     }
    ],
@@ -202,7 +202,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1/10 [02:14<20:07, 134.16s/it]"
+      "100%|██████████| 10/10 [27:25<00:00, 164.59s/it]\n",
+      "100%|██████████| 4/4 [01:41<00:00, 25.32s/it]\n"
      ]
     }
    ],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [03:03<00:00, 18.36s/it]\n",
+      "100%|██████████| 4/4 [01:45<00:00, 26.35s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = [pd.DataFrame(sub_pids, columns=[PID])]\n",
     "\n",
@@ -258,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,21 +322,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:21<00:00,  5.47s/it]"
+      "100%|██████████| 10/10 [00:44<00:00,  4.44s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TASK 3: 0.7194469400531611\n"
+      "TASK 1: 0.807753368162541\n",
+      "TASK 2: 0.9222469348913379\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:25<00:00,  6.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TASK 3: 0.7115516606663133\n"
      ]
     },
     {
